# libgrp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
Documentation/: Findlibgrp.cmake
Documentation/Diagrams/: GRP File Layout.odg  Palette File Layout.odg
Documentation/SampleContent/: CurruptSamplePalette.pal  SampleImage.grp
SampleSource/ConvertGRP/: main.cpp  main.hpp
SampleSource/ShowGRP/: main.cpp  main.hpp
SampleSource/ShowPalette/: main.cpp  main.hpp
Source/: libgrp.cpp  libgrp.hpp
Source/ColorPalette/: ColorPalette.cpp  ColorPalette.hpp
Source/Exceptions/: GRPException.hpp
Source/Exceptions/ColorPalette/: ColorPaletteException.cpp  ColorPaletteException.hpp
Source/Exceptions/GRPFrame/: GRPFrameException.hpp
Source/Exceptions/GRPImage/: GRPImageException.hpp
Source/GRPFrame/: GRPFrame.cpp  GRPFrame.hpp
Source/GRPImage/: GRPImage.cpp  GRPImage.hpp  GRPImageException.hpp
UnitTests/: main.cpp  main.hpp
UnitTests/APITest/: APITest.cpp  APITest.hpp
UnitTests/ColorPaletteTests/: ColorPaletteTests.cpp  ColorPaletteTests.hpp
UnitTests/GRPFrameTests/: GRPFrameTests.cpp  GRPFrameTests.hpp
UnitTests/GRPImageTests/: GRPImageTests.cpp  GRPImageTests.hpp
cmake/modules/: FindBoost.cmake  FindMagick++.cmake  FindMagick.cmake
